<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/gray" >

        <Button
            android:id="@+id/listbtn"
            android:layout_width="wrap_content"
            android:layout_height="44dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="48dp"
            android:background="@android:color/transparent"
            android:text="@string/mapa" />

        <Button
            android:id="@+id/mapbtn"
            android:layout_width="wrap_content"
            android:layout_height="44dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="44dp"
            android:background="@android:color/transparent"
            android:text="@string/lista" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/mapbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:background="@drawable/bj"
            android:text="@string/go" />

        <ImageView
            android:id="@+id/pic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:src="@drawable/pic" />

        <ImageView
            android:id="@+id/gogo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:src="@drawable/go1" />
    </LinearLayout>

    <SurfaceView
        android:id="@+id/ditu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1" />

</RelativeLayout>