<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/white" >

        <RelativeLayout
            android1:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/gray" >

    <Button
        android:id="@+id/listbtn"
        android:layout_width="wrap_content"
        android:layout_height="44dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="48dp"
        android:background="@android:color/transparent"
        android:text="@string/mapa" />

    <Button
        android:id="@+id/mapbtn"
        android:layout_width="wrap_content"
        android:layout_height="44dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="44dp"
        android:background="@android:color/transparent"
        android:text="@string/lista" />

    </RelativeLayout>
    <ListView
        android1:id="@+id/listView1"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/relativeLayout1" >
   </ListView>
    <LinearLayout android:id="@+id/bottom"  
android:layout_width="fill_parent"  
android:layout_height="wrap_content"  
android:orientation="horizontal"  
android:layout_alignParentBottom="true"  >

       <EditText
            android1:id="@+id/editText1"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:ems="10" >
        </EditText>

        <Button
            android1:id="@+id/mapbtn"
            android1:layout_width="wrap_content"
            android1:layout_height="match_parent"
            android1:layout_weight="0.97"
            android1:background="@drawable/bj"
            android1:text="@string/go" />

        
               <ImageView
                   android1:id="@+id/pic"
                   android1:layout_width="wrap_content"
                   android1:layout_height="match_parent"
                   android1:layout_weight="0.97"
                   android1:src="@drawable/pic" />

                      <ImageView
                          android1:id="@+id/gogo"
                          android1:layout_width="wrap_content"
                          android1:layout_height="match_parent"
                          android1:layout_weight="0.97"
                          android1:src="@drawable/go1" />
  
</LinearLayout>

    

</RelativeLayout>